@@ -1,3 +1,7 @@
+2008-10-31  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/GParted_Core.cc: Changed thread status messages to be unique
+
 2008-10-30  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/GParted_Core.cc: Added translator comments
